2008-08-29  Jun Yan <jyan@stat.uconn.edu>

	* Bug fixed in the random number generation for the 
	Clayton copula.	

	* empcop*.test functions renamed to *indepTest.
	    
	* Documentation improved.

2008-07-17  Jun Yan <jyan@stat.uconn.edu>

	* Ivan has implemented and tested multiplier CLT 
	goodness-of-fit tests (bivariate and multivariate) for 
	certain copulas.

	* Restructured R files under directory R.

	* Expressions for derivatives of cdf/pdf are now stored 
	as opposed to computed on the fly.

	* Numerical approximation functions for tau and rho
	and its derivatives for special cases are now stored 
	in sysdata.rda under directory R.


2008-01-22  Ivan Kojadinovic  <ivan@stat.auckland.ac.nz>

	* The structure of the empcop*.test has been changed.
	All the statistics are computed using the same code.
	The only difference comes from the array J which changes 
	according to whether * in {u,m,s,sm}. The computation 
	is much faster.

2008-01-14  Jun Yan <jyan@stat.uconn.edu>

	* Restructured empcopsm for better performance. 
	Arrays W, K, and L are stored for reference in each permutation.
	The computation is about 3 times faster.
	
	* Fixed a bug in random permutation:
	(i + 1) * runif() instead of i * runif().
	The bug is seen for the case n = 2, where no permutation 
	would happen.
	
	* When compute p-values of Tippett, use obs <= sim as oppose to 
	obs < sim because this statistic is discrete.
	
2008-01-02  Ivan Kojadinovic  <ivan@stat.auckland.ac.nz>

	* The tests of independence based on the empirical copula 
	have been renamed to empcopu.test (univariate) and 
	empcopm.test (multivariate).

	* Some computations have been improved.

	* Serial analogs of these tests have been implemented. They 
	are called empcops.test and empcopsm.test and can be used to 
	test serial independence in univariate and multivariate 
	continuous time series.

2007-12-11  Jun Yan <jyan@stat.uconn.edu>

	* Fixed a bug in fitCopula (thanks to Rodrigo Dupleich